# stc89prac

./: .gitignore  CMakeLists.txt  main.asm  main.c  main.ihx  main.lst  main.map  main.mem  main.rel  main.rst  main.sym
